# OpsSim-AI

./: .dockerignore  .gitignore  Dockerfile  README.md  Tasks-Doc.txt  __init__.py  env.py  grader.py  inference.py  llm_parser.py  local_infer.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  test.py
server/: app.py  requirements.txt
tasks/: easy.json  hard.json  medium.json
